FIX: external link spacing

--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -40,7 +40,7 @@
       display            : inline-block;
       filter             : opacity(0.5);
       inline-size        : var(--icon-width);
-      margin-inline-start: 0.1em;
+      margin-inline-start: 0.25em;
       overflow           : hidden;
       position           : absolute;
       text-indent        : var(--icon-width);
